# nix-hs

./: .envrc  .gitignore  CHANGES.md  LICENSE  README.md  compilers.json  default.nix  example.nix  nix-hs.nix  shell.nix
.github/workflows/: dynamic-linking.yml  static-linking.yml  test.yml  tests.yml
lib/: default.nix  ghc.nix  haskell.nix  packages.nix
nix/: cabal-fmt.nix  cabal2nix.nix  call-package.nix  compilers.nix  ghcide.nix  haskell-packages-overlay.nix  interactive.nix  lib.nix  make-haskell-package.nix  make-overlay.nix  ormolu.nix  package.nix  patches.nix  profile.nix  shell.nix  sources.json  src.nix  stack.nix  stan.nix
nix/shell/: cabal-fmt.nix  default.nix  ghcide.nix  haskell-language-server.nix  ormolu.nix  overrides.nix  stan.nix
patches/: nixpkgs-ghc865-ncurses6.patch
scripts/: cachix.sh
shell/: default.nix  overrides.nix  shell-ghc8101.nix  shell-ghc865.nix  shell-ghc883.nix  shell.nix
src/: nix-hs.sh
templates/: default.nix  inputs.nix
test/: default.nix  full-static.nix  shell.nix  test.cabal  test.sh
test/hello-world/: default.nix  hello-world.cabal  release.nix
test/hello-world/app/: Main.hs
test/hello-world/src/: Hello.hs
test/multi-package/: default.nix
test/overrides/: default.nix  overrides.cabal
