cabal-version:       >=1.10
name:                hello-world
version:             0.1.0.0
license-file:        /dev/null
build-type:          Simple

library
  build-depends:   base
  hs-source-dirs:  src
  exposed-modules: Hello

executable hello
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base, aeson, hello-world
  default-language:    Haskell2010
